Fixed `FixedPopupPanels` background color on high contrast

--- a/styles/colors-highcontrast.scss
+++ b/styles/colors-highcontrast.scss
@@ -52,7 +52,8 @@
 
 	// FixedPopupPanles
 	// ---------------------------------------
-	--sand-flexible-popup-panles-bg-color-rgb: 0, 0, 0;
+	--sand-fixed-popup-panles-bg-color-rgb: 0, 0, 0;
+	--sand-fixed-popup-panles-scrimtransparent-bg-color-rgb: 0, 0, 0;
 
 	// PopupTabLayout
 	// ---------------------------------------
