--- a/styles/colors-light.scss
+++ b/styles/colors-light.scss
@@ -32,7 +32,8 @@
 
 	// FixedPopupPanles
 	// ---------------------------------------
-	--sand-flexible-popup-panles-bg-color-rgb: 187, 187, 187, 90%;
+	--sand-fixed-popup-panles-bg-color-rgb: 187, 187, 187, 90%;
+	--sand-fixed-popup-panles-scrimtransparent-bg-color-rgb: 187, 187, 187, 95%;
 
 	// common colors
 	--sand-alert-overlay-bg-color-rgb: 0, 0, 0;
